CI uyumlu test dosyaları ve workflow güncellemesi

--- a/.github/workflows/.ci.yml
+++ b/.github/workflows/.ci.yml
@@ -24,6 +24,11 @@ jobs:
       run: |
         pip install pytest selenium
 
+    - name: Install Chrome
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y google-chrome-stable
+
     - name: Run PyTest
       run: pytest tests -q
 
