CI workflow güncellemesi selenium icin

--- a/.github/workflows/.ci.yml
+++ b/.github/workflows/.ci.yml
@@ -22,7 +22,7 @@ jobs:
 
     - name: Install dependencies
       run: |
-        pip install pytest selenium
+        + pip install pytest selenium webdriver-manager
 
     - name: Install Chrome
       run: |
