CI workflow güncellemesi selenium yazim hatasi duzeltmesi

--- a/.github/workflows/.ci.yml
+++ b/.github/workflows/.ci.yml
@@ -22,7 +22,8 @@ jobs:
 
     - name: Install dependencies
       run: |
-        + pip install pytest selenium webdriver-manager
+          python -m pip install --upgrade pip
+          pip install pytest selenium webdriver-manager
 
     - name: Install Chrome
       run: |
