--- a/.github/workflows/.ci.yml
+++ b/.github/workflows/.ci.yml
@@ -62,7 +62,7 @@ jobs:
         docker push ${{ secrets.DOCKERHUB_USERNAME }}/insider-chrome-node:v1
 
   deploy-to-k8s:
-    name: Deploy to Kubernetes (Optional)
+    name: Deploy to Kubernetes on AWS EKS
     runs-on: ubuntu-latest
     needs: docker-build-push
     if: github.ref == 'refs/heads/main'
@@ -71,15 +71,16 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v4
 
-    - name: Setup Kubectl
-      uses: azure/setup-kubectl@v4
+    - name: Configure AWS CLI
+      uses: aws-actions/configure-aws-credentials@v2
       with:
-        version: 'latest'
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws-region: ${{ secrets.AWS_REGION }}
 
-    - name: Set Kubeconfig From GitHub Secret
+    - name: Update kubeconfig for EKS
       run: |
-        mkdir -p ~/.kube
-        echo "${{ secrets.KUBECONFIG_BASE64 }}" | base64 --decode > ~/.kube/config
+        aws eks update-kubeconfig --name ${{ secrets.EKS_CLUSTER_NAME }}
 
 
     - name: Apply K8s Manifests
